# Nova

./: .gitignore  CMakeLists.txt  premake5.lua
Editor/include/: Editor.hpp
Editor/res/: resource.h  resource.rc
Editor/src/: Editor.cpp  WinMain.cpp
Nova/: CMakeLists.txt
Nova/include/: Buffer.hpp  Camera.hpp  Input.hpp  InputLayout.hpp  Nova.hpp  Renderer.hpp  Shader.hpp  Transform.hpp  Window.hpp
Nova/include/Core/: Exception.hpp  Input.hpp  Window.hpp
Nova/include/Math/: Math.hpp  Matrix.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Nova/include/Renderer/: Renderer.hpp
Nova/include/Renderer/Bindable/: Bindable.hpp  ConstantBuffer.hpp  IndexBuffer.hpp  InputLayout.hpp  SamplerState.hpp  Shader.hpp  Texture.hpp  VertexBuffer.hpp
Nova/include/Renderer/Drawable/: Drawable.hpp  Mesh.hpp
Nova/src/: Buffer.cpp  Camera.cpp  Input.cpp  InputLayout.cpp  Nova.cpp  Renderer.cpp  Shader.cpp  Transform.cpp  Window.cpp
Nova/src/Core/: Exception.cpp  Input.cpp  Window.cpp
Nova/src/Math/: Matrix.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Nova/src/Renderer/: Renderer.cpp
Nova/src/Renderer/Bindable/: ConstantBuffer.cpp  IndexBuffer.cpp  InputLayout.cpp  SamplerState.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp
Nova/src/Renderer/Drawable/: Mesh.cpp
res/Shaders/: DummyShader.hlsl  PixelShader.hlsl  VertexShader.hlsl
